--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,41 @@ body {
   height: 100%;
   box-sizing: border-box;
 }
+
+h1 {
+  margin: 0 0 12px 0;
+  font-size: 1.5rem;
+  box-sizing: border-box;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+}
+
+a, a:visited, a:active {
+  color: #E5E5CB;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  margin: 0 8px;
+}
+
+a:hover {
+  color: #D5CEA3;
+  text-decoration: underline;
+}
+
+a .icon {
+  margin: 0 4px;
+}
+
+textarea {
+  resize: none;
+  font-size: 1rem;
+  line-height: 1.2rem;
+  min-height: 400px;
+  padding: 12px;
+}
+
+textarea:disabled {
+  cursor: not-allowed;
+}
